fix:spacing between elements

--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -62,6 +62,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 110%;
+letter-spacing: 0.06em;
 color: var(--color-primary);
 margin: 0;
 }
@@ -70,6 +71,8 @@ margin: 0;
     font-size: 13px;
     line-height: 15px;
     margin-top: 10px;
+    letter-spacing: 0.1em;
+
 }
 .nav__list {
     display: flex;
@@ -92,12 +95,10 @@ border-bottom:2px solid var(--color-primary);
  color: #FAFAFA;
 }
 .nav__link:hover{
-  /*  border-bottom:2px solid var(--color-primary);*/
- color: #FAFAFA;
+   color: #FAFAFA;
 }
 .start-screen{
-    /*margin-top: 60px;*/
-    padding-top: 60px;
+       padding-top: 60px;
 }
 
 .start-screen__content{
@@ -116,7 +117,10 @@ border-bottom:2px solid var(--color-primary);
     font-size: 35px;
     line-height: 130%;
     color: var(--color-dark-title);
+   
 }
+
+
 .start-screen__title{
     font-size: 44px;
     color: #FFFFFF;
@@ -171,18 +175,26 @@ border-bottom:2px solid var(--color-primary);
 }
 .about__title{
     width: 80%;
+    letter-spacing: 0.06em;
 }
 .about__text{
 color: var(--color-dark-text);
 margin-top: 25px;
+
 }
 .about-body{
     display: flex;
-    justify-content:space-around;
+    /*justify-content:space-around;*/
+    justify-content: space-evenly;
 
 }
 .about__content{
-    width: 36%;   
+   /* width: 36%;   */
+   width: 430px;
+   
+}
+.about__title{
+    margin: 14px 0;
 }
 /*pets*/
 .pets{
@@ -198,7 +210,11 @@ margin-top: 25px;
 }
 .pets__title{
     text-align: center;
-    width: 33.33%;
+    letter-spacing: 0.06em;
+
+   /* width: 33.33%;*/
+   width: 400px;
+    margin: 0;
 }
 .pets__slider{
     display: flex;
@@ -218,15 +234,16 @@ background-color: var(--color-light);
 box-sizing: border-box;
 border-radius: 100px;
 text-align: center;
+transition: .3s;
 }
 .button_arrow:hover{
     background-color: var(--color-primary-light);
 }
 .left-arrow{
-    margin-right: -47px;
+    margin-right: -40px;
 }
 .right-arrow{
-    margin-left: -47px;  
+    margin-left: -40px;  
 }
 .pets__card{
 width: 270px;
@@ -241,7 +258,7 @@ background-color: #fff;
 }
 .pets_name{
     font-size: 20px;
-    margin: 30px;
+  /*  margin: 30px;*/
 }
 .pets__img{
     border-radius: 9px;
@@ -260,12 +277,14 @@ height: 52px;
 background-color: #FAFAFA;
 border: 2px solid var(--color-primary);
 border-radius: 100px;
+transition: .3s;
+margin-top: 8px;
 }
 .pets__card:hover .button_secondary {
     background-color: var(--color-primary-light);  
     }
 .pets__button{
-    margin-top: 60px;
+  /*  margin-top: 60px;*/
     width: 261px;
    
 }
@@ -279,6 +298,11 @@ border-radius: 100px;
     text-align: center; 
 
 }
+.help__title{
+    width: 308px;
+    margin: 0 auto;
+    letter-spacing: 0.05em;
+}
 .help-list{
     display: flex;
     flex-wrap: wrap; 
@@ -288,13 +312,13 @@ border-radius: 100px;
    padding-right: 87px;
    padding-top: 60px;
 justify-items :center;
-   justify-content:center;   
+    justify-content:space-evenly;
 
 }
 .help-card_title{
     font-size: 20px;
 line-height: 23px;
-margin-top: 30px;
+margin-top: 25px;
 margin-bottom: 0px;
 }
 /*donation*/
@@ -307,6 +331,11 @@ margin-bottom: 0px;
     justify-content:center;
     align-items:center;
 }
+.donation-content{
+  padding-left: 8px;
+  /*  width: 41%;*/
+  width: 380px;
+}
 .dontion_img{
     background-image: url(../../assets/images/donation-dog.png);
     background-repeat: no-repeat;
@@ -315,13 +344,12 @@ margin-bottom: 0px;
     height: 261px;
     margin-right: 30px;
 }
-.donation-content{
-  /*  width: 41%;*/
-  width: 380px;
-}
+
 .donation-content__title{
+    width: 300px;
+    letter-spacing: 0.05em;
     margin-top: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 
 .donation-content__subtitle{
@@ -329,6 +357,7 @@ margin-bottom: 0px;
     line-height: 17px;
     margin-top: 0px;
     margin-bottom: 20px;
+    letter-spacing: 0.05em;
 }
 .donation-content__button {
     background: var(--color-primary);
@@ -337,9 +366,20 @@ margin-bottom: 0px;
 height: 43px;
 margin-top: 0px;
 margin-bottom: 20px;
+
+display: flex;
+justify-content: center;
+align-items:center;
+transition: .3s;
 }
 .dotation__link{
     text-decoration: none;
+}
+.donation-content__button:hover{
+    background: var(--color-primary-light);
+}
+
+.card-number{
     font-family: 'Georgia';
 font-style: normal;
 font-weight: 400;
@@ -347,16 +387,10 @@ font-size: 20px;
 line-height: 23px;
 color:var(--color-dark-title) ;
 }
-.donation-content__button:hover{
-    background: var(--color-primary-light);
-}
-
-.donation-content__button-text{
-    padding: 10px 15px 10px 15px; 
-    margin: 0px; 
-}
 .donation-content__img-card{
-     margin-right: 15px;
+ margin-right: 15px;
+ width: 30px;
+height: 23px;
 }
 .dotation-content__text{
     font-family: 'Arial';
@@ -372,32 +406,39 @@ color: #B2B2B2;
 }
 .footer-content{
     display: flex;
-   column-gap:  160px;
+ /*  column-gap:  150px;*/
+ justify-content: space-between;
   
 }
 .footer-contact{
     display: grid;
     column-gap:  20px; 
-   margin-bottom: 60px;
-   align-self:center; 
+    row-gap: 40px;
+   margin-bottom: 42px;
+   align-self:center;
+   grid-template-columns: 40px 1fr; 
+   width: 278px;
 }
 .footer-locations{
     display: grid;
+    row-gap: 30px;
     column-gap:  20px;
-    margin-bottom: 60px;
+      margin-bottom: 42px;
     align-self:center;
+    grid-template-columns: 22px 1fr; 
+    width: 302px;
 }
 .email__link{
     text-decoration: none;
     align-self:center;
 }
-/*.footer__ico{
-   align-self:center;
-}
-*/
+
 .footer-content__title{
     color: #FFFFFF;
    grid-column: span 2;  
+   margin-top: 55px;
+   margin-bottom: 0px;
+   letter-spacing: 0.05em;
 }
 .footer__img{
     width: 300px;
@@ -411,4 +452,5 @@ align-self:flex-end;
     font-size: 20px;
     line-height: 23px;
     align-self:center;  
+   margin:0;
 }
